<resources>
    <string name="app_name">Aplikasi Movie dan TV</string>
    <string name="title_activity_detail_movie">DetailMovieActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="title">Title</string>
    <string name="description">Description</string>

    <string name="movie">Movie</string>
    <string name="tvshow">TV Show</string>
    <string name="bookmark">Bookmark</string>

    <string name="moviebookmark">Movie Bookmark</string>
    <string name="tvshowbookmark">TV Show Bookmark</string>

    <string name="info_date">Tanggal Rilis %s</string>

    <string name="menu_bookmark">bookmark</string>
</resources>